--- a/cs1023-2021-cpp-examples/adapter-example/.vscode/tasks.json
+++ b/cs1023-2021-cpp-examples/adapter-example/.vscode/tasks.json
@@ -6,11 +6,12 @@
 			"label": "C/C++: g++ build active file",
 			"command": "/usr/bin/g++",
 			"args": [
+				"-std=c++20",
+				"-fpermissive",
 				"-g",
 				"${file}",
 				"-o",
-				"${fileDirname}/${fileBasenameNoExtension}",
-				"-lpthread",
+				"${fileDirname}/${fileBasenameNoExtension}"
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
